# ChemAudit

./: .env.example  .env.prod.example  .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  DEPLOYMENT.md  README.md  SECURITY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  release-please-config.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  lint.yml  release.yml  secret-scan.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: INTEGRATIONS.md  STRUCTURE.md
backend/: Dockerfile  Dockerfile.prod  alembic.ini  entrypoint.sh  pyproject.toml  run_migrations.py
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  cli.py  main.py
backend/data/: chembl_approved_drugs.csv  chembl_approved_fps.npz
backend/profiling/: __init__.py  benchmark_results.md  profile_validation.py
backend/scripts/: generate_chembl_fps.py
backend/tests/: __init__.py  conftest.py  test_admin_auth.py  test_analytics_chemspace.py  test_analytics_clustering.py  test_analytics_dedup.py  test_analytics_mcs.py  test_analytics_mmp.py  test_analytics_registration.py  test_analytics_scaffold.py  test_analytics_statistics.py  test_analytics_taxonomy.py  test_api_keys.py  test_cache.py  test_celery_config.py  test_cli.py  test_email_validation.py  test_error_sanitization.py  test_health.py  (+11 more)
client/: README.md  pyproject.toml
client/chemstructval/: __init__.py  client.py  exceptions.py  models.py
client/chemvault/: __init__.py  client.py  exceptions.py  models.py
client/examples/: basic_usage.py  batch_processing.py
client/tests/: __init__.py  test_client.py
config/: coconut.yml  large.yml  medium.yml  small.yml  xl.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLAUDE_CODE_GUIDE.md  DEPLOYMENT.md  GETTING_STARTED.md  PHASES.md  PRD.md  PROJECT.md  README.md  SCORING_METHODOLOGY.md  SKILLS.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/: .env.development  .env.production  Dockerfile.prod  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
nginx/: Dockerfile  locations.conf  nginx-ssl.conf  nginx.conf  ssl-params.conf
(+687 files in other folders)
